--- a/updatedProject-2.ipynb
+++ b/updatedProject-2.ipynb
@@ -144,13 +144,13 @@
         "    objects = annot_dict['object']\n",
         "    if isinstance(objects, list):\n",
         "        for item in objects:\n",
-        "          x = int(item['bndbox']['xmin'])\n",
-        "          y = int(item['bndbox']['ymin'])\n",
-        "          width = int(item['bndbox']['xmax'])\n",
-        "          height = int(item['bndbox']['ymax'])\n",
+        "          xmin = int(item['bndbox']['xmin'])\n",
+        "          ymin = int(item['bndbox']['ymin'])\n",
+        "          xmax = int(item['bndbox']['xmax'])\n",
+        "          ymax = int(item['bndbox']['ymax'])\n",
         "          label = classes[item['name']] # 1-hot encoding.\n",
         "\n",
-        "          bbox = (x, y, width, height, label)\n",
+        "          bbox = (xmin, ymin, xmax, ymax, label)\n",
         "          bboxes.append(bbox)\n",
         "  \n",
         "          image = image.resize((224,224), Image.ANTIALIAS)\n",
@@ -159,13 +159,13 @@
         "          dataimage.append(image_arr)\n",
         "\n",
         "    else:\n",
-        "        x = int(item['bndbox']['xmin'])\n",
-        "        y = int(item['bndbox']['ymin'])\n",
-        "        width = int(item['bndbox']['xmax'])\n",
-        "        height = int(item['bndbox']['ymax'])\n",
+        "        xmin = int(item['bndbox']['xmin'])\n",
+        "        ymin = int(item['bndbox']['ymin'])\n",
+        "        xmax = int(item['bndbox']['xmax'])\n",
+        "        ymax = int(item['bndbox']['ymax'])\n",
         "        label = classes[item['name']] # 1-hot encoding.\n",
         "\n",
-        "        bbox = (x, y, width, height, label)\n",
+        "        bbox = (xmin, ymin, xmax, ymax, label)\n",
         "        bboxes.append(bbox)\n",
         "  \n",
         "        image = image.resize((224,224), Image.ANTIALIAS)\n",
